feat: improve color scheme of categories. Add empty message for prompt

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -6,6 +6,16 @@
     <title>Vidura</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+    <style>
+      body {
+        font-family: 'Poppins', sans-serif;
+      }
+
+      .title {
+        font-size: 1rem;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
