refactor: minor ui touchups

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -31,6 +31,10 @@
       background-color: #e6b5c9;
     }
   </style>
+  <div class="container">
+    <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS). Using it one can create, retreive, or search their prompts
+    </p>
+  </div><br />
   <div class="columns is-multiline">
     {% for category, color in categories_with_colors %}
       <div class="column is-one-third">
