--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -15,6 +15,10 @@
       .title {
         font-size: 1rem;
       }
+
+      .logo {
+        font-size: 1.5rem;
+      }
     </style>
 </head>
 <body>
@@ -22,7 +26,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="{% url 'list_categories' %}">
-                    <strong>Vidura (ChatGPT Prompt System)</strong>
+                    <strong class="logo">Vidura</strong>
                 </a>
             </div>
             <div class="navbar-menu">
