feat: add prompt editor

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.default.min.css" integrity="sha512-pTaEn+6gF1IeWv3W1+7X7eM60TFu/agjgoHmYhAfLEU8Phuf6JKiiE8YmsNC0aCgQv4192s4Vai8YZ6VNM6vyQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
       body {
         font-family: 'Poppins', sans-serif;
@@ -18,6 +19,10 @@
 
       .logo {
         font-size: 1.5rem;
+      }
+
+      .selectize-control.multi .selectize-input [data-value]{
+        background: #4D5CCA;
       }
     </style>
 </head>
@@ -34,6 +39,7 @@
                     <a class="navbar-item" href="{% url 'list_categories' %}">
                         Categories
                     </a>
+                    <a class="navbar-item" href="{% url 'editor' %}">Editor</a>
                 </div>
                 <div class="navbar-end">
                     {% if user.is_authenticated %}
@@ -51,5 +57,7 @@
             {% endblock %}
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js" integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
