--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -24,26 +24,27 @@
       .selectize-control.multi .selectize-input [data-value]{
         background: #4D5CCA;
       }
+
     </style>
 </head>
 <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-black  has-shadow">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item" href="{% url 'list_categories' %}">
-                    <strong class="logo">Vidura</strong>
+                <a class="navbar-item has-text-white" href="{% url 'list_categories' %}">
+                    <strong class="logo">Vidura</strong> &nbsp;<p>Beta</p>
                 </a>
             </div>
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="{% url 'list_categories' %}">
+                    <a class="navbar-item has-text-white" href="{% url 'list_categories' %}">
                         Categories
                     </a>
-                    <a class="navbar-item" href="{% url 'editor' %}">Editor</a>
+                    <a class="navbar-item has-text-white" href="{% url 'editor' %}">Editor</a>
                 </div>
                 <div class="navbar-end">
                     {% if user.is_authenticated %}
-                    <a class="navbar-item" href="{% url 'logout' %}">
+                    <a class="navbar-item has-text-white" href="{% url 'logout' %}">
                         Logout
                     </a>
                     {% endif %}
