feat: add footer and modify license

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -1,3 +1,4 @@
+{% load tz %} 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,11 @@
 
       .title {
         font-size: 1rem;
+        line-height: 4.125;
+      }
+
+      .footer {
+        max-height: 10px;
       }
 
       .logo {
@@ -82,5 +88,11 @@
     </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js" integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <footer class="footer">
+        <p>{% now 'Y' %}. All rights reserved @ <a href="https://happy-pythonist.com/" target="_blank">happy-pythonist.com</a></p>
+        <a href="https://github.com/narenaryan/Vidura" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+      </footer>
 </body>
 </html>
