feat: add copy to clipboard icon to search prompts

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -56,6 +56,7 @@
     </style>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
     <nav class="navbar is-black  has-shadow">
         <div class="container">
             <div class="navbar-brand">
