--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -35,6 +35,31 @@
     <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS). Using it one can create, retreive, or search their prompts
     </p>
   </div><br />
+  <button class="button is-primary" id="add-category-button">Add category</button><hr />
+  <div class="modal" id="add-category-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Add Category</p>
+        <button class="delete" aria-label="close" id="close-modal"></button>
+      </header>
+      <section class="modal-card-body">
+        <form id="add-category-form">
+          {% csrf_token %}
+          <div class="field">
+            <label for="category-name" class="label">Category Name</label>
+            <div class="control">
+              <input type="text" class="input" id="category-name" placeholder="Enter category name" required>
+            </div>
+          </div>
+        </form>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success" id="save-category">Save</button>
+        <button class="button" id="cancel-category">Cancel</button>
+      </footer>
+    </div>
+  </div>  
   <div class="columns is-multiline">
     {% for category, color in categories_with_colors %}
       <div class="column is-one-third">
@@ -44,6 +69,48 @@
           </div>
         </a>
       </div>
+      {% empty %}
+      <div class="column">
+        <p>No categories found. Add one by clicking the "Add Category" button.</p>
+      </div>
     {% endfor %}
   </div>
+  <script>
+    $(document).ready(function() {
+    
+      $("#add-category-button").click(function() {
+        $("#add-category-modal").addClass("is-active");
+      });
+    
+      $("#close-modal, #cancel-category").click(function() {
+        $("#add-category-modal").removeClass("is-active");
+      });
+    
+      $("#save-category").click(function(event) {
+        event.preventDefault();
+        const categoryName = $("#category-name").val();
+    
+        if (categoryName.trim() !== "") {
+          $.ajax({
+            url: "{% url 'create_category' %}",
+            type: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "X-CSRFToken": "{{ csrf_token }}"
+            },
+            data: JSON.stringify({
+              name: categoryName
+            }),
+            success: function() {
+              window.location.reload();
+            },
+            error: function(xhr, status, error) {
+              console.error(xhr.responseText);
+            }
+          });
+        }
+      });
+    });
+    
+  </script>
 {% endblock %}
