feat: make sticky navbar

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -12,6 +12,7 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
+        padding-top: 2.25rem;
       }
 
       .title {
@@ -87,7 +88,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js" integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
-    <nav class="navbar is-black  has-shadow" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top is-black  has-shadow" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item has-text-white" href="/">
