fix: change color scheme to brighter tone pastels

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -20,22 +20,26 @@
     }
 
     .pastel-blue {
-      background-color: #b5d5e6;
+      background-color: #92B4EC;
     }
 
     .pastel-yellow {
-      background-color: #f5e6b5;
+      background-color: #F8C766;
     }
 
     .pastel-pink {
-      background-color: #e6b5c9;
+      background-color: #F6B7A2;
+    }
+
+    .add-category {
+      color: #02c0a4
     }
   </style>
   <div class="container">
     <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS). Using it one can create, retreive, or search their prompts
     </p>
   </div><br />
-  <button class="button is-primary" id="add-category-button">Add category</button><hr />
+  <button class="button is-primary add-category" id="add-category-button">Add category</button><hr />
   <div class="modal" id="add-category-modal">
     <div class="modal-background"></div>
     <div class="modal-card">
