docs: upgrade banner message in categories page

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -36,7 +36,7 @@
     }
   </style>
   <div class="container">
-    <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS). Using it one can create, retreive, or search their prompts
+    <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.
     </p>
   </div><br />
   <button class="button is-primary add-category" id="add-category-button">Add category</button><hr />
