--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -70,7 +70,7 @@
             <div class='rows'>
             <h3 class="subtitle">No prompts. Here's a cookie <svg style="height: 20px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M247.2 17c-22.1-3.1-44.6 .9-64.4 11.4l-74 39.5C89.1 78.4 73.2 94.9 63.4 115L26.7 190.6c-9.8 20.1-13 42.9-9.1 64.9l14.5 82.8c3.9 22.1 14.6 42.3 30.7 57.9l60.3 58.4c16.1 15.6 36.6 25.6 58.7 28.7l83 11.7c22.1 3.1 44.6-.9 64.4-11.4l74-39.5c19.7-10.5 35.6-27 45.4-47.2l36.7-75.5c9.8-20.1 13-42.9 9.1-64.9l-14.6-82.8c-3.9-22.1-14.6-42.3-30.7-57.9L388.9 57.5c-16.1-15.6-36.6-25.6-58.7-28.7L247.2 17zM208 144a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM144 336a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm224-64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg></h3>
             <button class="button is-primary">
-              <a href="{% url 'editor' %}" class="add-prompt-btn">Add prompt</a>
+              <a href="{% url 'editor' %}?category_id={{ category.id }}" class="add-prompt-btn">Add prompt</a>
             </button>
           </div>
           </div>
@@ -143,17 +143,17 @@
       $('#editPromptModal').removeClass('is-active');
     }
 
+    // Saves updated prompt
     async function saveEditPrompt() {
-      const promptId = $('#editPromptId').value;
-      const newText = $('#editPromptText').value;
-  
+      const promptId = $('#editPromptId').val();
+      const updatedText = $('#editPromptText').val();
       const response = await fetch(`/prompts/edit/${promptId}/`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
           'X-CSRFToken': '{{ csrf_token }}'
         },
-        body: JSON.stringify({ 'text': newText })
+        body: JSON.stringify({ 'text': updatedText })
       });
   
       if (response.ok) {
@@ -165,7 +165,7 @@
 
     // Handle scratchpad prompt
     function openScratchpadPrompt(promptId) {
-      $('#editPromptId').val(promptId);
+      $('#scratchPromptId').val(promptId);
       const promptText = $(`[data-prompt-id="${promptId}"]`).data('fullText');
       $('#scratchPromptText').val(promptText);
       $('#scratchpadPromptModal').addClass('is-active');
